Integrated Open Content

--- a/app/views/management/page_steps/_footer.html.erb
+++ b/app/views/management/page_steps/_footer.html.erb
@@ -1,10 +1,10 @@
 <div class="form-group row">
   <div class="col-sm-offset-2 col-sm-10">
     <% unless local_assigns[:no_continue] %>
-      <%= f.button 'CONTINUE', value: Management::PageStepsController::CONTINUE, type: 'submit', method: :put, class: 'btn btn-primary' %>
+      <%= f.button 'CONTINUE', value: Management::PageStepsController::CONTINUE, type: 'submit', class: 'btn btn-primary' %>
     <% end %>
     <% if @page.id %>
-        <%= f.button 'SAVE CHANGES', value: Management::PageStepsController::SAVE, type: 'submit', method: :put, class: 'btn btn-primary' %>
+        <%= f.button 'SAVE CHANGES', value: Management::PageStepsController::SAVE, type: 'submit', class: 'btn btn-primary' %>
     <% end %>
     <%= link_to 'CANCEL', management_site_site_pages_path(@site.slug), class: 'btn btn-secondary' %>
   </div>
