--- a/app/views/admin/site_steps/settings.html.erb
+++ b/app/views/admin/site_steps/settings.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'shared/navigation_header', locals: {form_steps: @site.form_steps, id: @site.id, current_step: step} %>
+<%= render partial: 'shared/navigation_header', locals: {form_steps: wizard_steps, id: @site.id, current_step: step, step_names: @steps_names} %>
 <%= render partial: 'shared/errors', locals: { resource: @site } %>
 <%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
 
