--- a/app/views/shared/_navigation_header.html.erb
+++ b/app/views/shared/_navigation_header.html.erb
@@ -1,11 +1,11 @@
 <div class="c-steps-bar">
   <div class="wrapper">
     <ul class="steps">
-      <% form_steps.each do |step| %>
+      <% form_steps.each_with_index do |step, i| %>
         <li>
-          <% tab_index = disable_button?(form_steps, step, current_step, id) ? '-1' : '0' %>
+          <% tab_index = disable_button?(form_steps, step, current_step, id, local_assigns[:invalid_steps], local_assigns[:invalid_state]) ? '-1' : '0' %>
           <% html_class =
-               if disable_button?(form_steps, step, current_step, id)
+               if disable_button?(form_steps, step, current_step, id, local_assigns[:invalid_steps], local_assigns[:invalid_state])
                  '-disabled'
                elsif active_button?(form_steps, step, current_step, id)
                  '-active'
@@ -13,7 +13,7 @@
                  ''
                end
           %>
-          <%= link_to step.capitalize, wizard_path(step), 'tabindex': tab_index, class: html_class %>
+          <%= link_to step_names[i], wizard_path(step), 'tabindex': tab_index, class: html_class %>
         </li>
       <% end %>
     </ul>
