--- a/app/assets/stylesheets/layouts/management/l-page-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-page-creation.scss
@@ -3,6 +3,10 @@
   // screen has a small height
   padding-bottom: 75px;
 
+  &.-position {
+    margin-top: 50px;
+  }
+
   &.-type {
     display: flex;
     align-items: center;
