--- a/app/views/management/page_steps/_footer.html.erb
+++ b/app/views/management/page_steps/_footer.html.erb
@@ -1,11 +1,13 @@
-<div class="form-group row">
-  <div class="col-sm-offset-2 col-sm-10">
-    <% unless local_assigns[:no_continue] %>
-      <%= f.button 'CONTINUE', value: Management::PageStepsController::CONTINUE, type: 'submit', class: 'btn btn-primary' %>
-    <% end %>
-    <% if @page.id %>
-        <%= f.button 'SAVE CHANGES', value: Management::PageStepsController::SAVE, type: 'submit', class: 'btn btn-primary' %>
-    <% end %>
-    <%= link_to 'CANCEL', management_site_site_pages_path(@site.slug), class: 'btn btn-secondary' %>
+<div class="c-action-bar">
+  <div class="wrapper">
+    <%= link_to 'Cancel', management_site_site_pages_path(@site.slug), class: 'c-button -outline -dark-text' %>
+    <div>
+      <% unless local_assigns[:no_continue] %>
+        <%= f.button 'Continue', value: Management::PageStepsController::CONTINUE, type: 'submit', class: 'c-button' %>
+      <% end %>
+      <% if @page.id %>
+        <%= f.button 'Save changes', value: Management::PageStepsController::SAVE, type: 'submit', class: 'c-button' %>
+      <% end %>
+    </div>
   </div>
 </div>
