--- a/app/views/management/page_steps/position.html.erb
+++ b/app/views/management/page_steps/position.html.erb
@@ -2,11 +2,32 @@
   {form_steps: form_steps, id: @page.id, current_step: step, step_names: @steps_names, \
 invalid_steps: @invalid_steps, invalid_state: @page.errors.any?} %>
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
+<% content_for :extended_header do %>
+  <div class="c-extended-header">
+    <div class="wrapper">
+      <div class="description">
+        <h1>Choose the position</h1>
+        <p>Drag the green box to the place you want your new page to be</p>
+      </div>
+    </div>
+  </div>
+<% end %>
 
+
+
+<%= render partial: 'shared/navigation_header', locals: {form_steps: form_steps, id: @page.id, current_step: step} %>
+
+<div class="l-page-creation -position">
+  <div class="wrapper">
+    <div class="js-tree">
+    </div>
+  </div>
+</div>
 
 <h1>POSITION</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla laoreet velit ante, ornare pretium sapien venenatis vel. Mauris nec nisi sit amet ex commodo sodales eget placerat metus.</p>
 <%= form_for @page, url: wizard_path, method: :put do |f| %>
   <%= render partial: 'footer', locals: {f: f} %>
 <% end %>
-<%= render partial: 'shared/errors', locals: { resource: @page} %>
+
+<%= render partial: 'shared/errors', locals: { resource: @page } %>
