--- a/app/views/management/page_steps/title.html.erb
+++ b/app/views/management/page_steps/title.html.erb
@@ -1,23 +1,30 @@
+<% content_for :extended_header do %>
+  <div class="c-extended-header">
+    <div class="wrapper">
+      <div class="description">
+        <h1>Page title</h1>
+        <p>Choose a title for your page and write a small description for yourself and for the search engines</p>
+      </div>
+    </div>
+  </div>
+<% end %>
+
 <%= render partial: 'shared/navigation_header', locals: \
   {form_steps: form_steps, id: @page.id, current_step: step, step_names: @steps_names, \
   invalid_steps: @invalid_steps, invalid_state: @page.errors.any?} %>
-<%= render partial: 'shared/errors', locals: { resource: @page } %>
 
 <%= form_for @page, url: wizard_path, method: :put do |f| %>
-  <%# TODO: Create CSS %>
-  <div class="l-page-creation -name">
+  <div class="l-page-creation -title">
     <div class="wrapper">
-      <h1>PAGE TITLE</h1>
-      <p class="intro">Please choose a name for the page and a short description.</p>
-
-      <div class="page-name">
+      <div class="inputs-container">
         <%= f.label :name %>
-        <%= f.text_field :name , placeholder: 'Type here your page\'s title' %>
+        <%= f.text_field :name, placeholder: 'Page\'s title' %>
         <%= f.label :description %>
-        <%= f.text_field :description, placeholder: 'Description here' %>
+        <%= f.text_area :description, placeholder: 'Description' %>
       </div>
     </div>
   </div>
   <%= render partial: 'footer', locals: {f: f} %>
 <% end %>
+
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
