--- a/app/views/management/page_steps/title.html.erb
+++ b/app/views/management/page_steps/title.html.erb
@@ -21,6 +21,8 @@
         <%= f.text_field :name, placeholder: 'Page\'s title' %>
         <%= f.label :description %>
         <%= f.text_area :description, placeholder: 'Description' %>
+        <%= f.label :uri %>
+        <%= f.text_field :uri, placeholder: 'Page\'s uri' %>
       </div>
     </div>
   </div>
