--- a/app/views/management/page_steps/title.html.erb
+++ b/app/views/management/page_steps/title.html.erb
@@ -22,7 +22,7 @@
         <%= f.label :description %>
         <%= f.text_area :description, placeholder: 'Description' %>
         <%= f.label :uri %>
-        <%= f.text_field :uri, placeholder: 'Page\'s uri' %>
+        <%= f.text_field :uri, placeholder: 'URI' %>
       </div>
     </div>
   </div>
