--- a/app/views/management/page_steps/open_content.html.erb
+++ b/app/views/management/page_steps/open_content.html.erb
@@ -40,6 +40,6 @@
       </div>
   </div>
 
-  <%= render partial: 'footer', locals: {f: f} %>
+  <%= render partial: 'footer', locals: {f: f, no_continue: true} %>
   <%= render partial: 'shared/errors', locals: { resource: @page } %>
 <% end %>
