Bug fix: open content creation wasn't saving properly

--- a/app/views/management/page_steps/open_content_preview.html.erb
+++ b/app/views/management/page_steps/open_content_preview.html.erb
@@ -1,3 +1,5 @@
 <%= form_for @page, url: wizard_path, method: :put do |f| %>
   <%= render partial: 'finish_footer', locals: {f: f} %>
 <% end %>
+
+<%= console if Rails.env.development? %>
