--- a/app/views/management/page_steps/_footer.html.erb
+++ b/app/views/management/page_steps/_footer.html.erb
@@ -5,7 +5,7 @@
       <% unless local_assigns[:no_continue] %>
         <%= f.button Management::PageStepsController::CONTINUE, value: Management::PageStepsController::CONTINUE, type: 'submit', class: 'c-button js-submit' %>
       <% end %>
-      <% if @page.id %>
+      <% if @page.id || local_assigns[:always_save] %>
         <%= f.button Management::PageStepsController::SAVE, value: Management::PageStepsController::SAVE, type: 'submit', class: 'c-button' %>
       <% end %>
     </div>
