--- a/app/views/management/page_steps/position.html.erb
+++ b/app/views/management/page_steps/position.html.erb
@@ -12,6 +12,7 @@
 <%= render partial: 'shared/navigation_header', locals: \
   {form_steps: form_steps, id: @page.id, current_step: step, step_names: @steps_names, \
   invalid_steps: @invalid_steps, invalid_state: @page.errors.any?} %>
+<%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
 
 <div class="l-page-creation -position">
   <div class="wrapper">
