--- a/app/assets/stylesheets/components/management/c-wysiwyg.scss
+++ b/app/assets/stylesheets/components/management/c-wysiwyg.scss
@@ -1,7 +1,203 @@
 .c-wysiwyg {
-  padding: 20px 0;
-  border: 1px solid rgba($color-4, .3);
-  box-shadow: 0 2px 3px 0 rgba($color-4, .1);
+  position: relative;
+  max-width: 880px;
+  min-height: calc(100vh - 533px);
+  margin: 0 auto;
+  border: 1px solid $color-7;
+
+  .ql-editor {
+    min-height: 100%;
+    padding: 30px 105px;
+    overflow: visible;
+  }
+
+  // TOOLTIP
+  .ql-bubble {
+    .ql-toolbar {
+      display: flex;
+      justify-content: center ;
+      padding-top: 5px;
+
+      .ql-formats {
+        margin: 0;
+      }
+    }
+
+    .ql-tooltip {
+      height: 35px;
+      border-radius: 4px;
+      background-color: rgba($color-5, .8);
+      box-shadow: 0 1px 3px 0 rgba($color-5, .25);
+    }
+
+    .ql-tooltip-arrow {
+      top: auto;
+      bottom: -6px;
+      border-top: 6px solid rgba($color-5, .8);
+      border-bottom: 0;
+    }
+  }
+
+  .image-toolbar {
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    width: 100%;
+    height: 45px;
+    transform: translateY(-50%);
+
+    > button {
+      width: 45px;
+      height: 45px;
+      margin: 0 10px;
+      border: 0;
+      border-radius: 100%;
+      background-color: $color-1;
+      text-indent: -10000px;
+    }
+
+    &.-hidden {
+      display: none;
+    }
+  }
+
+  .sidebar {
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 50px;
+    width: calc(100% - 50px - 105px);
+    height: 45px;
+    transform: translateY(-50%);
+    z-index: 1;
+
+    &.-hidden {
+      display: none;
+    }
+
+    > button {
+      position: relative;
+      top: 5px;
+      flex-basis: 44px;
+      flex-shrink: 0;
+      height: 35px;
+      margin: 0;
+      padding: 0;
+      border: 0;
+      background: transparent;
+      text-indent: -10000px; // For accessibility, we keep the text
+      cursor: pointer;
+
+      &::after {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 6px;
+        transition: transform .3s;
+        color: $color-3;
+        font-family: monospace;
+        font-size: $font-size-big;
+        line-height: 35px;
+        text-indent: 0;
+        content: '+';
+      }
+
+      > svg {
+        display: block;
+      }
+    }
+
+    > .blocks {
+      display: none;
+    }
+
+
+    &.-expanded {
+      > button {
+        &::after {
+          transform: rotate(-45deg);
+        }
+      }
+
+      > .blocks {
+        display: flex;
+        position: relative;
+        flex-grow: 1;
+        flex-shrink: 1;
+        justify-content: center;
+
+        button {
+          display: block;
+          position: relative;
+          width: 45px;
+          height: 45px;
+          margin: 0 10px;
+          padding: 0;
+          border: 0;
+          border-radius: 100%;
+          background-color: $color-1;
+          cursor: pointer;
+
+          > span {
+            display: block;
+            position: absolute;
+            bottom: -16px;
+            left: 0;
+            width: 100%;
+            color: rgba($color-4, .8);
+            font-size: $font-size-small;
+            text-align: center;
+          }
+        }
+
+        &::after {
+          display: block;
+          position: absolute;
+          top: 50%;
+          left: 0;
+          width: 100%;
+          height: 1px;
+          background-color: $color-7;
+          content: '';
+          z-index: -1;
+        }
+      }
+    }
+  }
+
+  // Styles of the content
+  .ql-editor {
+    h1 {
+      margin-bottom: 10px;
+      color: $color-4;
+      font-size: $font-size-huge;
+      font-weight: $font-weight-light;
+      letter-spacing: .3px;
+    }
+
+    p {
+      line-height: 1.5;
+    }
+
+    img {
+      display: block;
+      width: calc(100% + 390px);
+      max-width: none;
+      margin: 35px -195px;
+      border-radius: 4px;
+    }
+
+    .-intro {
+      margin-bottom: 30px;
+      font-size: $font-size-medium;
+      font-weight: $font-weight-light;
+      letter-spacing: .1px;
+      line-height: 1.54;
+    }
+  }
+
 
   p {
     margin: 0;
@@ -23,26 +219,6 @@
           color: rgba($color-4, .3);
           content: 'Introduction';
         }
-      }
-    }
-  }
-
-  .content-title {
-    color: $color-4;
-    font-size: $font-size-big;
-    font-weight: $font-weight-bold;
-
-    &.-empty {
-      position: relative;
-      min-height: $font-size-big;
-
-      &::after {
-        display: inline-block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        color: rgba($color-4, .3);
-        content: 'Title';
       }
     }
   }
