--- a/app/assets/stylesheets/layouts/management/l-page-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-page-creation.scss
@@ -69,6 +69,16 @@
     min-height: calc(100vh - 360px);
   }
 
+  &.-dataset {
+    .context {
+      margin: 50px 0 10px;
+      font-size: $font-size-big;
+      font-weight: $font-weight-light;
+      letter-spacing: .2px;
+      line-height: 1.14;
+    }
+  }
+
   &.-wysiwyg {
     margin-top: 50px;
 
