Makes the preview of the open content page work

--- a/app/assets/stylesheets/management/_settings.scss
+++ b/app/assets/stylesheets/management/_settings.scss
@@ -50,7 +50,9 @@ $color-12: #dd3e21;
 
 // General layout
 $body-max-width:         1280px;
-$wrapper-padding:          130px;
+$content-max-width:       750px;
+$media-max-width:        1060px;
+$wrapper-padding:         130px;
 $wrapper-tablet-padding:   30px;
 $wrapper-mobile-padding:   15px;
 
