Changed the open pages footer to match the new design

--- a/app/views/management/page_steps/_footer.html.erb
+++ b/app/views/management/page_steps/_footer.html.erb
@@ -8,6 +8,9 @@
       <% if @page.id || local_assigns[:always_save] %>
         <%= f.button Management::PageStepsController::SAVE, value: Management::PageStepsController::SAVE, type: 'submit', class: 'c-button' %>
       <% end %>
+      <% if local_assigns[:publish] %>
+        <%= f.button Management::PageStepsController::PUBLISH, value: Management::PageStepsController::PUBLISH, type: 'submit', class: 'c-button' %>
+    <% end %>
     </div>
   </div>
 </div>
