--- a/app/views/management/page_steps/_finish_footer.html.erb
+++ b/app/views/management/page_steps/_finish_footer.html.erb
@@ -1,10 +1,8 @@
 <div class="c-action-bar">
   <div class="wrapper">
-    <%= link_to 'Page Creation', management_site_site_pages_path(@site.slug), class: 'c-button -outline -dark-text' %>
+    <%= link_to 'Back to Pages', management_site_site_pages_path(@site.slug), class: 'c-button -outline -dark-text' %>
     <div>
-      <% unless @page.enabled %>
-        <%= f.button 'Publish', value: Management::PageStepsController::CONTINUE, type: 'submit', class: 'c-button js-submit' %>
-      <% end %>
+      <%= f.button (@page.enabled ? 'Unpublish' : 'Publish'), value: Management::PageStepsController::CONTINUE, type: 'submit', class: 'c-button js-submit' %>
     </div>
   </div>
 </div>
