Bug fix: Corrected problem that prevented analysis dashboard from saving. Sample.rake: Changed the default dataset so it uses a CSV source instead of Carto.

--- a/app/views/management/page_steps/preview.html.erb
+++ b/app/views/management/page_steps/preview.html.erb
@@ -31,7 +31,7 @@
       </div>
     </div>
   </div>
-  <%= render partial: 'footer', locals: {f: f} %>
+  <%= render partial: 'footer', locals: {f: f, always_save: true, no_continue: true } %>
 <% end %>
-<%= render partial: 'shared/errors', locals: { resource: @page } %>
+<%= render partial: 'shared/errors', locals: { resource: @page} %>
 <%= console if Rails.env.development? %>
