--- a/app/views/management/page_steps/filters.html.erb
+++ b/app/views/management/page_steps/filters.html.erb
@@ -6,7 +6,11 @@
 
 
 <%= form_for(@page, url: wizard_path, method: :put, :html => {:class => 'js-form'}) do |f| %>
-  <div class="js-filters"></div>
+  <div class="l-page-creation -filters">
+    <div class="wrapper">
+      <div class="js-filters"></div>
+    </div>
+  </div>
   <%= render partial: 'footer', locals: {f: f} %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
