--- a/app/views/management/widgets/index.html.erb
+++ b/app/views/management/widgets/index.html.erb
@@ -1,3 +1,6 @@
 <%= render partial: 'management/extended_header'%>
 <%= include_gon %>
 <div class="js-tabs"></div>
+
+
+<h1>Under construction...</h1>
