Added the possibly visible filters to the filtered_results

--- a/app/views/management/page_steps/filters.html.erb
+++ b/app/views/management/page_steps/filters.html.erb
@@ -25,3 +25,5 @@
   <%= render partial: 'footer', locals: {f: f} %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
+
+<%= console if Rails.env.development? %>
