--- a/app/views/management/page_steps/columns.html.erb
+++ b/app/views/management/page_steps/columns.html.erb
@@ -1,19 +1,36 @@
+<% content_for :extended_header do %>
+  <div class="c-extended-header">
+    <div class="wrapper">
+      <div class="description">
+        <h1>Select columns</h1>
+        <p>Select the columns you want to use for the graphs and the map</p>
+      </div>
+    </div>
+  </div>
+<% end %>
+
 <%= render partial: 'shared/navigation_header', \
   locals: {form_steps: form_steps, id: @page.id, current_step: step, step_names: @steps_names, \
   invalid_steps: @invalid_steps, invalid_state: @page.errors.any?} %>
-<%= render partial: 'shared/errors', locals: { resource: @page } %>
 
-<h1>SELECT COLUMNS</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla laoreet velit ante, ornare pretium sapien venenatis vel. Mauris nec nisi sit amet ex commodo sodales eget placerat metus.</p>
 <%= form_for @page, url: wizard_path, method: :put do |f| %>
-    <% @fields.each do |field|%>
-        <fieldset>
-          <%= field[:name] %>
-          <%= check_box_tag "site_page[dataset_setting][visible_fields][]", field[:name],
-              (JSON.parse(@dataset_setting.columns_visible)).include?(field[:name]) %>
-        </fieldset>
-    <% end %>
-    <%= render partial: 'footer', locals: {f: f} %>
+  <div class="l-page-creation -columns">
+    <div class="wrapper">
+      <div class="c-cards-list">
+        <% @fields.each do |field|%>
+          <div class="card -single-data">
+            <label for="column-<%= field[:name] %>"><%= field[:name] %></label>
+            <%= check_box_tag "site_page[dataset_setting][visible_fields][]", field[:name],
+                (JSON.parse(@dataset_setting.columns_visible)).include?(field[:name]), id: 'column-' + field[:name] %>
+            <div class="content">
+              <h3><%= field[:name] %></h3>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <%= render partial: 'footer', locals: {f: f} %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
 
