Implements and styles the filters step (#98)
* Implements and styles the filters step

* Bug fix: the endpoint's url for filtering is now working when editing a page

* Updates the debounce & adds comments

* Adds the extended header

* Added the possibly visible filters to the filtered_results

* Fixes an issue where the user couldn't set filters

The problem is that the code didn't follow the specs when using HTMLElement.dataset so on some browsers, the manager wouldn't be able to select values for the filters

* Bug fix: Columns selection when editing a page

* Bug fix: Count of rows

* Bug fix: Multiple values in string field

--- a/app/views/management/page_steps/filters.html.erb
+++ b/app/views/management/page_steps/filters.html.erb
@@ -1,3 +1,14 @@
+<% content_for :extended_header do %>
+  <div class="c-extended-header">
+    <div class="wrapper">
+      <div class="description">
+        <h1>Apply filters</h1>
+        <p>Filter the dataset and choose which columns the users will be able to filter themselves on the dashboard</p>
+      </div>
+    </div>
+  </div>
+<% end %>
+
 <%= render partial: 'shared/navigation_header', locals: \
   {form_steps: form_steps, id: @page.id, current_step: step, step_names: @steps_names, \
   invalid_steps: @invalid_steps, invalid_state: @page.errors.any?} %>
@@ -6,7 +17,13 @@
 
 
 <%= form_for(@page, url: wizard_path, method: :put, :html => {:class => 'js-form'}) do |f| %>
-  <div class="js-filters"></div>
+  <div class="l-page-creation -filters">
+    <div class="wrapper">
+      <div class="js-filters"></div>
+    </div>
+  </div>
   <%= render partial: 'footer', locals: {f: f} %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
+
+<%= console if Rails.env.development? %>
