Implements the preview

--- a/app/assets/stylesheets/admin/application.scss
+++ b/app/assets/stylesheets/admin/application.scss
@@ -2,6 +2,7 @@
 'leaflet',
 'settings',
 '../base',
+'../layouts/shared/*',
 '../layouts/admin/*',
 '../components/shared/**/*',
 '../components/admin/**/*';
