--- a/app/assets/stylesheets/front/application-theme-lsa.scss
+++ b/app/assets/stylesheets/front/application-theme-lsa.scss
@@ -3,6 +3,7 @@
 'icons',
 'settings-theme-lsa',
 'base-theme-lsa',
+'../layouts/shared/*',
 '../layouts/front/*',
 '../components/shared/**/*',
 '../components/front/**/*';
