--- a/app/assets/stylesheets/management/application.scss
+++ b/app/assets/stylesheets/management/application.scss
@@ -5,6 +5,7 @@
 'select2',
 'settings',
 '../base',
+'../layouts/shared/*',
 '../layouts/management/*',
 '../components/shared/**/*',
 '../components/management/**/*';
