--- a/app/views/management/page_steps/_footer.html.erb
+++ b/app/views/management/page_steps/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="c-action-bar">
+<div class="c-action-bar <%= local_assigns[:wide] ? '-wide' : '' %>">
   <div class="wrapper">
     <%= link_to 'Cancel', management_site_site_pages_path(@site.slug), class: 'c-button -outline -dark-text' %>
     <div>
