--- a/app/views/management/page_steps/link.html.erb
+++ b/app/views/management/page_steps/link.html.erb
@@ -49,5 +49,5 @@
         <% end %>
       </div>
   </div>
-  <%= render partial: 'footer', locals: {f: f, always_save: true, no_continue: true} %>
+  <%= render partial: 'management/steps_shared/footer', locals: {f: f, always_save: true, no_continue: true} %>
 <% end %>
