--- a/app/views/management/dataset_steps/title.html.erb
+++ b/app/views/management/dataset_steps/title.html.erb
@@ -16,6 +16,6 @@
 
     </div>
   </div>
-  <%= render partial: 'footer', locals: { f: f} %>
+  <%= render partial: 'management/steps_shared/footer', locals: { f: f} %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @site } %>
