--- a/app/views/management/datasets/index.html.erb
+++ b/app/views/management/datasets/index.html.erb
@@ -2,4 +2,24 @@
 <%= include_gon %>
 <div class="js-tabs"></div>
 
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Context</th>
+    <th>Connector Providers</th>
+    <th>Edit</th>
+    <th>delete</th>
+  </tr>
+  <% @datasets.each do |dataset| %>
+    <tr>
+      <td><%= dataset.name%></td>
+      <td><%= ContextDataset.where(dataset_id: dataset.id).map{|ds| ds.context.name}.join(', ')%></td>
+      <td><%= dataset.provider%></td>
+      <td><%= link_to 'Edit', edit_management_site_dataset_dataset_step_path(@site.slug, dataset.id, 1) %></td>
+      <td><%= link_to 'Delete', management_site_dataset_path(@site.slug, dataset.id) %></td>
+    </tr>
+  <% end %>
+
+</table>
+
 <%= link_to 'New Dataset', new_management_site_dataset_step_path(@site.slug)%>
