--- a/app/views/management/page_steps/customization.html.erb
+++ b/app/views/management/page_steps/customization.html.erb
@@ -12,6 +12,6 @@
     <h2>Description</h2>
     <%= f.text_area :description %>
   </div>
-  <%= render partial: 'footer', locals: {f: f} %>
+  <%= render partial: 'management/steps_shared/footer', locals: {f: f} %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
