--- a/app/views/management/page_steps/filters.html.erb
+++ b/app/views/management/page_steps/filters.html.erb
@@ -21,6 +21,6 @@
       <div class="js-filters"></div>
     </div>
   </div>
-  <%= render partial: 'footer', locals: {f: f} %>
+  <%= render partial: 'management/steps_shared/footer', locals: {f: f} %>
 <% end %>
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
