--- a/app/views/management/page_steps/name.html.erb
+++ b/app/views/management/page_steps/name.html.erb
@@ -4,7 +4,7 @@
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
 
 <%= form_for @page, url: wizard_path, method: :put do |f| %>
-  <%= render partial: 'footer', locals: {f: f} %>
+  <%= render partial: 'management/steps_shared/footer', locals: {f: f} %>
 <% end %>
 
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
