--- a/app/views/management/page_steps/open_content.html.erb
+++ b/app/views/management/page_steps/open_content.html.erb
@@ -52,6 +52,6 @@
       </div>
   </div>
 
-  <%= render partial: 'footer', locals: {f: f, no_continue: true, always_save: true, publish: !@page.enabled } %>
+  <%= render partial: 'management/steps_shared/footer', locals: {f: f, no_continue: true, always_save: true, publish: !@page.enabled} %>
   <%= render partial: 'shared/errors', locals: { resource: @page } %>
 <% end %>
