--- a/app/views/management/page_steps/position.html.erb
+++ b/app/views/management/page_steps/position.html.erb
@@ -24,7 +24,7 @@
 <%= form_for(@page, url: wizard_path, method: :put, html: { class: 'js-form'}) do |f| %>
   <%= f.hidden_field :parent_id, class: 'js-parent_id' %>
   <%= f.hidden_field :position, class: 'js-position' %>
-  <%= render partial: 'footer', locals: {f: f} %>
+  <%= render partial: 'management/steps_shared/footer', locals: {f: f} %>
 <% end %>
 
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
