--- a/app/views/management/page_steps/title.html.erb
+++ b/app/views/management/page_steps/title.html.erb
@@ -28,7 +28,7 @@
       </div>
     </div>
   </div>
-  <%= render partial: 'footer', locals: {f: f} %>
+  <%= render partial: 'management/steps_shared/footer', locals: {f: f} %>
 <% end %>
 
 <%= render partial: 'shared/errors', locals: { resource: @page } %>
