--- a/app/views/management/dataset_steps/connector.html.erb
+++ b/app/views/management/dataset_steps/connector.html.erb
@@ -1,3 +1,41 @@
+ <div class="c-extended-header">
+    <div class="wrapper">
+      <div class="description">
+        <h1>Connector</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+      </div>
+    </div>
+  </div>
+
+<%= render partial: 'shared/navigation_header', locals: {form_steps: wizard_steps, id: @dataset.id, current_step: step, step_names: @steps_names} %>
+<%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
+
+<%= form_for @dataset, url: wizard_path, method: :put do |f| %>
+  <div class="l-site-creation -name">
+    <div class="wrapper">
+
+      <div class="dataset-title">
+        <%= f.label :title, for: 'title' %>
+        <%= f.text_field :name, id:'name', placeholder: 'Type here the dataset’s title' %>
+      </div>
+
+      <div class="dataset-tags">
+        <%= f.label :tags, for: 'tags' %>
+        <%= f.text_field :tags, id:'tags', placeholder: 'Type here the dataset’s tags' %>
+      </div>
+
+
+      <div class="js-urls"></div>
+
+    </div>
+  </div>
+  <%= render partial: 'management/steps_shared/footer', locals: { f: f} %>
+<% end %>
+<%= render partial: 'shared/errors', locals: { resource: @site } %>
+
+
+
+
 Connector Type: Rest
 Connector Providers Futureservice
 ConnectorUrl: futureservice
