--- a/app/assets/stylesheets/components/management/c-wysiwyg.scss
+++ b/app/assets/stylesheets/components/management/c-wysiwyg.scss
@@ -49,6 +49,7 @@
     transform: translateY(-50%);
 
     > button {
+      position: relative;
       width: 45px;
       height: 45px;
       margin: 0 10px;
@@ -56,6 +57,15 @@
       border-radius: 100%;
       background-color: $color-1;
       text-indent: -10000px;
+      cursor: pointer;
+
+      svg {
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
     }
 
     &.-hidden {
@@ -178,15 +188,20 @@
     }
 
     p {
+      margin: 15px 0;
       line-height: 1.5;
     }
 
-    img {
-      display: block;
-      width: calc(100% + 390px);
-      max-width: none;
-      margin: 35px -195px;
-      border-radius: 4px;
+    .-image {
+      position: relative;
+
+      > img {
+        display: block;
+        width: calc(100% + 390px);
+        max-width: none;
+        margin: 35px -195px;
+        border-radius: 4px;
+      }
     }
 
     .-intro {
