Added the information for the filters step. Refactoring and bugfixing

--- a/app/assets/stylesheets/components/shared/c-action-bar.scss
+++ b/app/assets/stylesheets/components/shared/c-action-bar.scss
@@ -6,6 +6,7 @@
   max-width: $body-max-width;
   height: 60px;
   background-color: $color-2;
+  z-index: 10;
 
   @media #{$mq-body-width} {
     left: 50%;
